--- a/public/assets/admin/css/custom_styles.css
+++ b/public/assets/admin/css/custom_styles.css
@@ -106,17 +106,29 @@ table.dataTable td.dt-type-numeric {
         margin-left: 20px;
         margin-right: 20px;
     }
+    .admin-index-blockquote {
+        margin-left: 38px;
+    }
 }
 
-@media (min-width:992px){
+@media (min-width:992px) {
     .offset-md-2-5 {
         margin-left: 20.833333%; /* (2.5 / 12) * 100 */
     }
 
+    .admin-index-blockquote {
+        margin-left: 200px;
+    }
 }
+    @media (min-width:1100px) {
+        .admin-index-blockquote {
+            margin-left: 300px;
+        }
+    }
 
 .admin-published-header {
     display: inline-block;
     vertical-align: middle;
     margin-right: 5px;
 }
+
